2008-08-15  Claudio Saavedra  <csaavedra@igalia.com>

	Bug 547944 – Self-reference in gtk_page_setup_load_file's docs

	* gtk/gtkpagesetup.c: Fix the reference in gtk_page_setup_load_file()
	documentation. Pointed out by Torsten Schoenfeld.

2008-08-15  Matthias Clasen  <mclasen@redhat.com>

	Bug 547655 – gio_can_sniff configure test can fail if not installed
	with prefix {/usr,/usr/local} and XDG_DATA_DIRS env not set

	* README.in: Add a note about shared-mime-info and XDG_DATA_DIRS.

2008-08-15  Christian Dywan  <christian@imendio.com>

	Bug 547846 – gtktestutils functions lack Since: tags

	* gtk/gtktestutils.c: Add missing Since tags

2008-08-15  Christian Dywan  <christian@imendio.com>

        Bug 547775 – Documentation of gtk-button-images is not correct

	* gtk/gtkbutton.c (gtk_button_class_init): Improve documentation
        of "gtk-button-images" setting

2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 547673 – Accessors for GtkFileSelection.font_entry and
	font_style_entry

	* gtk/gtk.symbols:
	* gtk/gtkfontsel.[hc]: Don't add getters for widgets that are not
	actually part of the font selection dialog in standard builds.
	Pointed out by Torsten Schoenfeld

2008-08-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 547516 – Add comments for translators in gtkprintbackendcups.c

	* modules/printbackends/cups/gtkprintbackendcups.c: Add translator
	hints. Patch by Leonardo Ferreira Fontenelle

2008-08-13  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmarshalers.list: get rid of the deprecated aliases NONE
	and BOOL.

	* gtk/gtkdialog.c
	* gtk/gtkentrycompletion.c
	* gtk/gtkmenuitem.c
	* gtk/gtkoldeditable.c
	* gtk/gtkrange.c
	* gtk/gtktreeview.c
	* gtk/gtkwidget.c: changed accordingly.

2008-08-13 Erwann Chenede - <erwann.chenede@sun.com>

	Bug 547456 - gdk/x11/gdkscreen-x11.c : init_solaris_xinerama 
	doesn't compile on Solaris

	* gdk/x11/gdkscreen-x11.c: make init_solaris_xinerama () compile 
	when HAVE_SOLARIS_XINERAMA is defined.
